mastodon/config/10-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deadinsi-de
spec:
  rules:
  - host: k8s.deadinsi.de
    http:
      paths:
      - backend:
          serviceName: mastodon-web
          servicePort: 80
        path: /
      - backend:
          serviceName: mastodon-streaming
          servicePort: 80
        path: /api/v1/streaming
  tls:
  - secretName: k8s-deadinsi.de
